@@ -823,6 +823,11 @@
     <None Include="Resources\plus.png" />
     <None Include="Icons\file.jpg" />
     <None Include="Icons\67.png" />
+    <None Include="Icons\nonprintchar.png" />
+    <None Include="Icons\brokendocument.png" />
+    <None Include="Icons\22.png" />
+    <None Include="Icons\221.png" />
+    <None Include="Icons\brokendocument1.png" />
     <Content Include="Translation\Dutch.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
