@@ -334,4 +334,10 @@
   <data name="entirefile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\67.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brokendocument" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\brokendocument.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nonprintchar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\nonprintchar.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
